--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   animated_text_kit: ^2.0.1
+  cloud_firestore: ^0.13.5
+  firebase_auth: ^0.16.0
+  firebase_core: ^0.4.4+3
 
 dev_dependencies:
   flutter_test:
