--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   firebase_auth: ^0.16.0
   firebase_core: ^0.4.4+3
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
